--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ name: Arigato
 region: India
 
 permalink: pretty
+
+twitter: "https://twitter.com/arigatoin"
+facebook: "https://www.facebook.com/arigatoindia/"
+snapchat: "#"
+instagram: "https://www.instagram.com/arigato.in/"
+medium:  "https://medium.com/@arigato"
