--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,11 @@ collections:
   freelancers:
     output: true
     permalink: /:title
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
